# windows_GPU_screen_recorder

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  LICENSE  PLAN.md  README.md  vcpkg.json
.github/workflows/: build-windows.yml
core/: CMakeLists.txt  d3d_context.cpp  d3d_context.h  pipeline.cpp  pipeline.h
core/audio/: aac_encoder.cpp  aac_encoder.h  audio_types.h  mixer.cpp  mixer.h  wasapi_loopback.cpp  wasapi_loopback.h  wasapi_mic.cpp  wasapi_mic.h
core/capture/: dda_capture.cpp  dda_capture.h  icapture.h  wgc_capture.cpp  wgc_capture.h  window_tracker.cpp  window_tracker.h
core/convert/: bgra_to_nv12.hlsl  color_converter.cpp  color_converter.h
core/encode/: amf_encoder.cpp  amf_encoder.h  iencoder.h  nvenc_encoder.cpp  nvenc_encoder.h  qsv_encoder.cpp  qsv_encoder.h
core/mux/: ffmpeg_muxer.cpp  imuxer.h  replay_buffer.cpp  replay_buffer.h
core/tests/: CMakeLists.txt  test_d3d_context.cpp  test_result.cpp
daemon/: CMakeLists.txt  hotkey.cpp  hotkey.h  ipc_server.cpp  ipc_server.h  main.cpp
daemon/overlay/: d3d11_hook.cpp  d3d11_hook.h  imgui_overlay.cpp  imgui_overlay.h  layered_window.cpp  layered_window.h
installer/: README.md
shared/: CMakeLists.txt  ipc_protocol.h  log.cpp  log.h  result.h  wstr.h
ui/: README.md
